--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -73,6 +73,13 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 
+        <!--		oracle数据库-->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>12.1.0.2.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -93,7 +100,8 @@
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.4.13</version>
+<!--				<version>0.4.13</version>-->
+				<version>0.4.9</version>
 				<configuration>
 					<!-- made of '[a-z0-9-_.]' -->
 					<imageName>${project.artifactId}:${project.version}</imageName>
