--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ### web
-server.port=8080
+server.port=8085
 server.servlet.context-path=/xxl-job-admin
 
 ### actuator
@@ -23,10 +23,15 @@ mybatis.mapper-locations=classpath:/mybatis-mapper/*Mapper.xml
 #mybatis.type-aliases-package=com.xxl.job.admin.core.model
 
 ### xxl-job, datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=root_pwd
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/xxl_job?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai
+#spring.datasource.username=root
+#spring.datasource.password=root_pwd
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+###oracle数据库
+spring.datasource.url=jdbc:oracle:thin:@10.1.86.55:1521:cxclmtst
+spring.datasource.username=YJXCLMBUSI
+spring.datasource.password=BU-02sic
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 ### datasource-pool
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -37,15 +42,15 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.pool-name=HikariCP
 spring.datasource.hikari.max-lifetime=900000
 spring.datasource.hikari.connection-timeout=10000
-spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.connection-test-query=SELECT 1 from dual
 spring.datasource.hikari.validation-timeout=1000
 
 ### xxl-job, email
-spring.mail.host=smtp.qq.com
+spring.mail.host=mail.alltrust.com.cn
 spring.mail.port=25
-spring.mail.username=xxx@qq.com
-spring.mail.from=xxx@qq.com
-spring.mail.password=xxx
+spring.mail.username=itos-zhangyk@alltrust.com.cn
+spring.mail.from=itos-zhangyk@alltrust.com.cn
+spring.mail.password=Aics@1234567
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
