--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -51,9 +51,21 @@ spring.mail.port=25
 spring.mail.username=itos-zhangyk@alltrust.com.cn
 spring.mail.from=itos-zhangyk@alltrust.com.cn
 spring.mail.password=Aics@1234567
+
+#################################本地验证#######################
+##发件服务器
+#spring.mail.host=smtp.163.com
+#spring.mail.port=25
+#spring.mail.username=18838918444@163.com
+#spring.mail.from=18838918444@163.com
+##第三方登录密码
+#spring.mail.password=CCDPYOUSGTZSJWUD
+
+
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
+##############关闭SSL加密配置##########################
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 
 ### xxl-job, access token
