--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.xuxueli</groupId>
 	<artifactId>xxl-job</artifactId>
-	<version>2.4.1-SNAPSHOT</version>
+<!--	<version>2.4.1-SNAPSHOT</version>-->
+	<version>2.4.1</version>
 	<packaging>pom</packaging>
 
 	<name>${project.artifactId}</name>
@@ -13,7 +14,8 @@
 	<modules>
 		<module>xxl-job-core</module>
 		<module>xxl-job-admin</module>
-		<module>xxl-job-executor-samples</module>
+		<!--		正式环境，此部分不需要-->
+		<!--		<module>xxl-job-executor-samples</module>-->
     </modules>
 
 	<properties>
@@ -71,6 +73,20 @@
 			<url>https://github.com/xuxueli</url>
 		</developer>
 	</developers>
+
+	<!--永诚远程仓库	-->
+	<distributionManagement>
+		<repository>
+			<id>Releases-Dev4</id>
+			<name>AICS Releases-Dev4 Repository</name>
+			<url>http://10.1.86.43:27897/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>Snapshots-Dev4</id>
+			<name>AICS Snapshots-Dev4 Repository</name>
+			<url>http://10.1.86.43:27897/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<profiles>
 
