--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -4,7 +4,8 @@
 	<parent>
 		<groupId>com.xuxueli</groupId>
 		<artifactId>xxl-job</artifactId>
-		<version>2.4.1-SNAPSHOT</version>
+<!--		<version>2.4.1-SNAPSHOT</version>-->
+		<version>2.4.1</version>
 	</parent>
 	<artifactId>xxl-job-admin</artifactId>
 	<packaging>jar</packaging>
@@ -81,6 +82,20 @@
 		</dependency>
 
 	</dependencies>
+
+	<!--永诚远程仓库	-->
+	<distributionManagement>
+		<repository>
+			<id>Releases-Dev4</id>
+			<name>AICS Releases-Dev4 Repository</name>
+			<url>http://10.1.86.43:27897/nexus/content/repositories/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>Snapshots-Dev4</id>
+			<name>AICS Snapshots-Dev4 Repository</name>
+			<url>http://10.1.86.43:27897/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
