--- a/xxl-job-executor-samples/pom.xml
+++ b/xxl-job-executor-samples/pom.xml
@@ -5,13 +5,14 @@
     <parent>
         <groupId>com.xuxueli</groupId>
         <artifactId>xxl-job</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+<!--        <version>2.4.1-SNAPSHOT</version>-->
+        <version>2.4.1</version>
     </parent>
     <artifactId>xxl-job-executor-samples</artifactId>
     <packaging>pom</packaging>
 
     <modules>
-        <module>xxl-job-executor-sample-frameless</module>
+<!--        <module>xxl-job-executor-sample-frameless</module>-->
         <module>xxl-job-executor-sample-springboot</module>
     </modules>
 
