--- a/xxl-job-admin/pom.xml
+++ b/xxl-job-admin/pom.xml
@@ -67,6 +67,13 @@
 			<version>${mysql-connector-j.version}</version>
 		</dependency>
 
+		<!--MyBatis分页插件-->
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.4.6</version>
+		</dependency>
+
 		<!-- xxl-job-core -->
 		<dependency>
 			<groupId>com.xuxueli</groupId>
@@ -79,6 +86,12 @@
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>12.1.0.2.0</version>
+		</dependency>
+
+		<!--		yml-->
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
 		</dependency>
 
 	</dependencies>
